test/src/e2e_vm_tests/test_programs/should_pass/language/struct_instantiation/src/lib.sw
library;

pub struct Struct<T> {
  pub x: T,
}
