test/src/e2e_vm_tests/test_programs/should_fail/trait_coherence/orphan_rules/impl_orphan_lib/src/lib.sw
library;

pub trait Vec<T> {}
